Bug 67900. Unitialized bare pointer with nsCOMPtr, avoiding crash if GetElementResource() fails, and fixing a leak to boot. r=scottip,rjesup; sr=alecf; a=blizzard